[tool.poetry]
name = "repl_python3_Myai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyjokes = "^0.6.0"
pyttsx3 = "^2.90"
wikipedia = "^1.4.0"
replit = "^3.2.4"
discord = "^1.7.3"
Flask = "^2.0.1"
opencv-python = "^4.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
